hydroflow/tests/compile-fail/surface_demux_port_missing.stderr
error: `demux(..)` closure argument `c` missing corresponding output port.
 --> tests/compile-fail/surface_demux_port_missing.rs:5:71
  |
5 |         my_demux = source_iter(0..10) -> demux(|item, var_args!(a, b, c)| {
  |                                                                       ^

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demux_port_missing.rs:1:35
  |
1 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
